--- a/server/package.json
+++ b/server/package.json
@@ -1,19 +1,22 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "npx tsc -b",
+    "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "npm run build && npm run start"
+    "dev": "tsc && node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.21",
     "express": "^4.19.2",
     "socket.io": "^4.7.3"
   },
-  "description": ""
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "typescript": "^5.2.2"
+  },
+  "description": "A backend server with TypeScript"
 }
